Marvel-app/prod/mongo-user-permissions.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-mongo-permissions
spec:
  validationFailureAction: enforce
  rules:
  - name: check-for-mongo-permissions
    match:
      resources:
        kinds:
        - MongoDBCommunity
    validate:
      message: 'A user named "admin" must be created and have admin roles on the cluster, all databases, and users.'
      pattern:
        spec:
          users:
          - name: admin
            ^(roles):
            - name: dbAdminAnyDatabase
              db: admin
            - name: userAdminAnyDatabase
              db: admin
            - name: clusterAdmin
              db: admin
