Marvel-app/prod/mutate-mongo-admin.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-mongo-admin
spec:
  rules:
    - name: set-mongo-admin
      match:
        any:
        - resources:
            kinds:
            - MongoDBCommunity
      mutate:
        patchesJson6902: |-
          - path: "/spec/users"
            op: add
            value:
            - name: admin
              roles:
              - name: dbAdminAnyDatabase
                db: admin
              - name: userAdminAnyDatabase
                db: admin
              - name: clusterAdmin
                db: admin
