Marvel-app/prod/mutate-storageclass.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-storage-class
spec:
  rules:
    - name: set-storage-class
      match:
        any:
        - resources:
            kinds:
            - StorageClass
      mutate:
        patchStrategicMerge:
          provisioner: csi.storageos.com
          parameters:
            storageos.com/replicas: "2"
            storageos.com/encryption: "true"
            csi.storage.k8s.io/fstype: xfs
            csi.storage.k8s.io/secret-name: storageos-api
            csi.storage.k8s.io/secret-namespace: storageos
