Marvel-app/prod/require-replicas-prod.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-replicas
spec:
  validationFailureAction: enforce
  rules:
  - name: check-for-replicas-prod
    match:
      resources:
        kinds:
        - StorageClass
        name: "ondat-replicated"
    validate:
      message: "Number of replicas must be greater or equal to 3"
      pattern:
        parameters:
          storageos.com/replicas: ">=3"
